[gd_scene load_steps=13 format=3 uid="uid://dua2vx4bi1gmf"]

[ext_resource type="Script" uid="uid://b4q0diu63qlg8" path="res://addons/asset_placer/ui/asset_placer_options/asset_placer_options.gd" id="1_7uy5w"]
[ext_resource type="Script" uid="uid://btqju8qjrlawq" path="res://addons/asset_placer/ui/components/vector3_spinbox.gd" id="2_k4pj7"]
[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="2_o45xf"]

[sub_resource type="Texture2D" id="Texture2D_rixd2"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"Node3D"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_o45xf"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"NodeWarning"

[sub_resource type="Texture2D" id="Texture2D_br0rc"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"RandomNumberGenerator"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="LabelSettings" id="LabelSettings_o45xf"]
font_size = 14

[sub_resource type="Texture2D" id="Texture2D_5lmt4"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"Snap"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_5hqbk"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"ArrowUp"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_dewax"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"ControlAlignBottomWide"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_nfir2"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"KeyTrackRotation"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_ik2kd"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_o45xf")
icon_name = &"KeyTrackScale"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="AssetPlacerOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uy5w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("Texture2D_rixd2")
stretch_mode = 3

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Assets Parent: "

[node name="ParentButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "No parent selected"
icon = SubResource("Texture2D_o45xf")
alignment = 0

[node name="PlacementMode" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer"]
layout_mode = 2

[node name="PlacementModeLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Placement Mode: "

[node name="PlacementModeOptionsButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Surface Collisions"
popup/item_0/id = 0
popup/item_1/text = "Plane Collision"
popup/item_1/id = 1
popup/item_2/text = "Terrain3D"
popup/item_2/id = 2

[node name="PlaneOriginContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/PlaneOriginContainer"]
layout_mode = 2
text = "Plane Origin:   "

[node name="PlaneOriginSpinBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/PlaneOriginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-100, -100, -100)
max = Vector3(100, 100, 100)
metadata/_custom_type_script = "uid://btqju8qjrlawq"

[node name="PlaneAxisContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/PlaneAxisContainer"]
layout_mode = 2
text = "Plane Normal: "

[node name="PlaneAxisSpinBox" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PlacementMode/VBoxContainer/PlaneAxisContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-1, -1, -1)
max = Vector3(1, 1, 1)
normalized = true
metadata/_custom_type_script = "uid://btqju8qjrlawq"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RandomAssetCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable Random Asset Placement"
icon = SubResource("Texture2D_br0rc")

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Experimental: This option will pick item from the currently visible assets  after each placement"
label_settings = SubResource("LabelSettings_o45xf")
autowrap_mode = 2

[node name="Snapping" type="BoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Snapping"]
layout_mode = 2

[node name="GridSnappingCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/Snapping/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Grid Snapping"
icon = SubResource("Texture2D_5lmt4")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/Snapping/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Snapping/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Grid Step"

[node name="GridSnapValueSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/Snapping/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 1.0
editable = false

[node name="AlignNormalsCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Align Normals"
icon = SubResource("Texture2D_5hqbk")

[node name="UseAssetsOriginCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Use Assets Origin"
icon = SubResource("Texture2D_dewax")

[node name="FoldableContainer" type="BoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="RandomRotationCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Randomize Rotation On Placement"
icon = SubResource("Texture2D_nfir2")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Min"

[node name="MinRotationSelector" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-180, -180, -180)
max = Vector3(180, 180, 180)
metadata/_custom_type_script = "uid://btqju8qjrlawq"

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Max"

[node name="MaxRotationSelector" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-180, -180, -180)
max = Vector3(180, 180, 180)
metadata/_custom_type_script = "uid://btqju8qjrlawq"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="RandomScaleCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Randomize Scale On Placement"
icon = SubResource("Texture2D_ik2kd")

[node name="UniformScaleCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Unform Scaling"

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Min"

[node name="MinScaleSelector" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-100, -100, -100)
max = Vector3(100, 100, 100)
uniform = true
metadata/_custom_type_script = "uid://btqju8qjrlawq"

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Max"

[node name="MaxScaleSelector" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FoldableContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_k4pj7")
min = Vector3(-100, -100, -100)
max = Vector3(100, 100, 100)
uniform = true
metadata/_custom_type_script = "uid://btqju8qjrlawq"
